<resources>
    <string name="app_name">Final Project</string>

    <string name="usernameInputHint">Username</string>
    <string name="emailInputHInt">Email</string>
    <string name="passwordInputHint">Password</string>
    <string name="confirmPasswordInputHint">Confirm password</string>
    <string name="searchFriendInputHint">Add friend</string>

    <string name="emailInputHelper">E.g: yourname@gmail.com</string>
    <string name="passwordInputHelper">Password must at least 6 characters</string>
    <string name="confirmPasswordInputHelper">Must match to password</string>
    <string name="usernameInputHelper">Sample username input helper</string>

    <string name="passwordInputError">At least 6 characters</string>
    <string name="confirmPasswordInputError">Not match to password</string>
    <string name="emailInputError">Invalid Email</string>
    <string name="usernameInputError">Sample username error</string>

    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="logOut">Log out</string>
    <string name="add">Add</string>

    <string name="navigationHomeTab">Home</string>
    <string name="navigationChatTab">Chat</string>
    <string name="navigationPersonalTab">Personal</string>
    <string name="navigationContactTab">Contact</string>

    <string name="requestSignUp">Have not account yet?</string>
    <string name="sampleSplash">Splash screen</string>

    <string name="onSuccess">Success</string>
    <string name="sampleEmail">sample@gmail.com</string>
    <string name="sampleName">Sample name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
