<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginVertical="@dimen/baseMargin"
        android:hint="@string/emailInputHInt"
        app:errorIconDrawable="@drawable/ic_error_black_24dp"
        app:helperText="@string/emailInputHelper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginVertical="@dimen/baseMargin"
        android:hint="@string/passwordInputHint"
        app:errorIconDrawable="@drawable/ic_error_black_24dp"
        app:helperText="@string/passwordInputHelper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginVertical="@dimen/baseMargin"
        android:hint="@string/confirmPasswordInputHint"
        app:errorIconDrawable="@drawable/ic_error_black_24dp"
        app:helperText="@string/confirmPasswordInputHelper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerConfirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginVertical="@dimen/baseMargin"
        android:hint="@string/usernameInputHint"
        app:errorIconDrawable="@drawable/ic_error_black_24dp"
        app:helperText="@string/usernameInputHelper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp" />


</LinearLayout>